# FZSD_vision_task

./: .gitignore  README.md
armor_detector/: CMakeLists.txt  package.xml
armor_detector/include/armor_detector/: armor.hpp  armordetectornode.hpp  detector.hpp  helpers.hpp  pnpsolver.hpp
armor_detector/src/: armordetectornode.cpp  detector.cpp  pnpsolver.cpp
armor_interface/: package.xml
hjc_task1/: .gitignore
hjc_task1/armor_detector/include/armor_detector/: armor.hpp  armordetectornode.hpp  detector.hpp  helpers.hpp
hjc_task1/armor_detector/src/: detector.cpp  pnpsolver.cpp
hjc_task1/armor_interface/: CMakeLists.txt
hjc_task1/armor_interface/msg/: Armor.msg  Armors.msg
hjc_task1/ros2_hik_camera/: README.md
hjc_task1/ros2_hik_camera/src/: hik_camera_node.cpp
